--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "lcbo",
   "version": "0.0.1",
   "description": "A Windows frontend to a beautiful LCBO API.",
-  "main": "server.js",
   "dependencies": {
-    "grunt-contrib-watch": "~0.6.1",
     "grunt": "~0.4.5",
-    "grunt-sass": "~0.16.0",
+    "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "~0.7.0",
+    "grunt-contrib-jade": "^0.13.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-includes": "^0.4.5",
+    "grunt-sass": "~0.16.0",
+    "load-grunt-tasks": "^1.0.0",
     "node-sass": "~0.7.0",
-    "winjs": "~3.0.1",
-    "node-static": "~0.7.6"
+    "node-static": "~0.7.6",
+    "winjs": "~3.0.1"
   },
   "devDependencies": {},
   "scripts": {
