--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "A Windows frontend to a beautiful LCBO API.",
   "dependencies": {
+    "foundation": "^4.2.1-1",
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "~0.7.0",
@@ -12,9 +13,8 @@
     "grunt-sass": "~0.16.0",
     "load-grunt-tasks": "^1.0.0",
     "node-sass": "~0.7.0",
-    "node-static": "~0.7.6",
-    "winjs": "~3.0.1",
-    "foundation": "^4.2.1-1"
+    "node-static": "^0.7.6",
+    "winjs": "~3.0.1"
   },
   "devDependencies": {},
   "scripts": {
