--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "elsie",
-  "version": "0.0.2",
-  "description": "A Windows frontend to a beautiful LCBO API.",
+  "version": "1.0.0",
+  "description": "A Windows frontend to a lovely LCBO API.",
   "dependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "^0.5.0",
