--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A mobile frontend to a lovely LCBO API.",
   "dependencies": {
     "angular-material": "^0.8.3",
+    "angular-ui-router": "^0.2.14",
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "~0.7.0",
