--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "2.0.0",
   "description": "A mobile frontend to a lovely LCBO API.",
   "dependencies": {
-    "angular-material": "^0.8.3",
-    "angular-ui-router": "^0.2.14",
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "~0.7.0",
@@ -13,14 +11,9 @@
     "grunt-includes": "^0.4.5",
     "grunt-sass": "~0.16.0",
     "load-grunt-tasks": "^1.0.0",
-    "node-sass": "~0.7.0",
-    "roboto-font": "^0.1.0"
+    "node-sass": "~0.7.0"
   },
   "devDependencies": {},
-  "scripts": {
-    "test": "node server.js",
-    "start": "node server.js"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/dougestey/elsie.git"
