--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
   ],
   "license": "none",
   "dependencies": {
-    "angular-material": "0.9.0-rc2",
+    "angular-material": "0.10.1",
     "roboto-fontface": "~0.4.0",
     "angular-ui-router": "~0.2.14"
   }
