--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "angular-material": "0.10.1",
     "roboto-fontface": "~0.4.0",
-    "angular-ui-router": "~0.2.14"
+    "angular-ui-router": "~0.2.14",
+    "verge": "~1.9.1"
   }
 }
