--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-material": "0.10.1",
     "roboto-fontface": "~0.4.0",
     "angular-ui-router": "~0.2.14",
-    "verge": "~1.9.1"
+    "verge": "~1.9.1",
+    "store": "~2.3.0"
   }
 }
