--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "load-grunt-tasks": "^1.0.0",
     "node-sass": "~0.7.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt-angular-templates": "^0.5.7"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/dougestey/elsie.git"
