--- a/.jshintrc
+++ b/.jshintrc
@@ -5,7 +5,7 @@
   "indent": 2,
   "latedef": true,
   "laxcomma": true,
-  "newcap": true,
+  "newcap": false,
   "noarg": true,
   "quotmark": "true",
   "undef": true,
