--- a/bower.json
+++ b/bower.json
@@ -18,11 +18,15 @@
   ],
   "license": "none",
   "dependencies": {
-    "angular-material": "~1.0.0-rc3",
-    "angular-ui-router": "~0.2.14",
-    "roboto-fontface": "~0.4.0",
+    "angular": "1.3.20",
+    "angular-animate": "1.3.20",
+    "angular-aria": "1.3.20",
+    "angular-material": "1.0.0-rc3",
+    "angular-ui-router": "0.2.14",
+    "roboto-fontface": "0.4.0",
     "store": "~2.3.0",
-    "verge": "~1.9.1",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "angular-velocity": "~0.3.2",
+    "velocity": "~1.2.3"
   }
 }
