--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
   "bugs": {
     "url": "https://github.com/dougestey/elsie/issues"
   },
-  "homepage": "https://github.com/dougestey/elsie"
+  "homepage": "https://github.com/dougestey/elsie",
+  "cordovaPlugins": [],
+  "cordovaPlatforms": [
+    "android"
+  ]
 }
