--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "~0.7.0",
     "grunt-contrib-jade": "^0.13.0",
+    "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-includes": "^0.4.5",
     "grunt-sass": "~0.16.0",
     "load-grunt-tasks": "^1.0.0",
-    "node-sass": "~0.7.0"
+    "node-sass": "latest"
   },
   "devDependencies": {
     "grunt-angular-templates": "^0.5.7"
