--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "angular": "1.3.20",
     "angular-animate": "1.3.20",
     "angular-aria": "1.3.20",
-    "angular-material": "1.0.1",
+    "angular-material": "1.0.0-rc3",
     "angular-ui-router": "0.2.14",
     "roboto-fontface": "0.4.0",
     "store": "~2.3.0",
